new proj/src/objects/GE_SS_Time__c.object
<CustomObject>
    <fields>
        <fullName>GE_SS_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_SS_HMS_From__c</fullName>
        <label>HMS From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_SS_HMS_Hours__c</fullName>
        <formula>( GE_SS_HMS_To__c -  GE_SS_HMS_From__c ) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HMS Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_SS_HMS_To__c</fullName>
        <label>HMS To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_SS_Overtime_From__c</fullName>
        <label>Overtime From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_SS_Overtime_Hours__c</fullName>
        <formula>( GE_SS_Overtime_To__c -  GE_SS_Overtime_From__c ) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overtime Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_SS_Overtime_To__c</fullName>
        <label>Overtime To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_SS_Regular_From__c</fullName>
        <label>Regular From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_SS_Regular_Hours__c</fullName>
        <formula>( GE_SS_Regular_To__c -  GE_SS_Regular_From__c ) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regular Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_SS_Regular_To__c</fullName>
        <label>Regular To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_SS_Service_Ticket__c</fullName>
        <label>Service Ticket</label>
        <referenceTo>GE_SS_Service_Ticket__c</referenceTo>
        <relationshipLabel>Times</relationshipLabel>
        <relationshipName>Times</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_SS_Standby_From__c</fullName>
        <label>Standby From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_SS_Standby_Hours__c</fullName>
        <formula>( GE_SS_Standby_To__c -  GE_SS_Standby_From__c ) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standby Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_SS_Standby_To__c</fullName>
        <label>Standby To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_SS_WBS__c</fullName>
        <label>WBS</label>
        <type>TextArea</type>
    </fields>
    <label>Time</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>HMS_Hours_Time_Validation</fullName>
        <active>false</active>
        <description>HMS From field must not be earlier than HMS To field</description>
        <errorConditionFormula>GE_SS_HMS_From__c   &gt;   GE_SS_HMS_To__c</errorConditionFormula>
        <errorDisplayField>GE_SS_HMS_From__c</errorDisplayField>
        <errorMessage>The HMS From field cannot be earlier than the HMS To field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Overtime_Hours_Time_Validation</fullName>
        <active>false</active>
        <description>Overtime From field must not be earlier than Overtime To field</description>
        <errorConditionFormula>GE_SS_Overtime_From__c    &gt;    GE_SS_Overtime_To__c</errorConditionFormula>
        <errorDisplayField>GE_SS_Overtime_From__c</errorDisplayField>
        <errorMessage>The Overtime From field cannot be earlier than the Overtime To field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Regular_Hours_Time_Validation</fullName>
        <active>false</active>
        <description>Regular From field must not be earlier than Regular To field</description>
        <errorConditionFormula>GE_SS_Regular_From__c  &gt;  GE_SS_Regular_To__c</errorConditionFormula>
        <errorDisplayField>GE_SS_Regular_From__c</errorDisplayField>
        <errorMessage>The Regular From field cannot be earlier than the Regular To field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Standby_Hours_Time_Validation</fullName>
        <active>false</active>
        <description>Standby From field must not be earlier than Standby To field</description>
        <errorConditionFormula>GE_SS_Standby_From__c  &gt;  GE_SS_Standby_To__c</errorConditionFormula>
        <errorDisplayField>GE_SS_Standby_From__c</errorDisplayField>
        <errorMessage>The Standby From field cannot be earlier than the Standby To field</errorMessage>
    </validationRules>
</CustomObject>